Fix Railway deployment: add package-lock.json and update configuration

--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,8 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd server && npm install && npm run build"
 
 [deploy]
-startCommand = "cd server && npm start"
+startCommand = "cd server && npm install && npm run build && npm start"
 healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
