--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "PDFFlow backend server",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
-    "postinstall": "npm run build"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,14 +18,20 @@
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "joi": "^17.9.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "helmet": "^7.0.0",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
     "@types/multer": "^1.4.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^18.17.0",
     "@types/uuid": "^9.0.2",
+    "@types/helmet": "^0.0.48",
+    "@types/compression": "^1.7.2",
+    "@types/morgan": "^1.9.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   }
