Fix Railway build: remove workspaces, fix TypeScript errors, server-only deployment

--- a/package.json
+++ b/package.json
@@ -7,17 +7,13 @@
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "workspaces": [
-    "client",
-    "server"
-  ],
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run dev",
-    "build": "npm run build:client && npm run build:server",
-    "build:client": "cd client && npm run build",
+    "build": "cd server && npm install && npm run build",
     "build:server": "cd server && npm run build",
+    "build:client": "cd client && npm run build",
     "start": "cd server && npm start",
     "install:all": "npm install && cd server && npm install && cd ../client && npm install"
   },
