--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
   "name": "pdfflow-frontend",
   "version": 2,
-  "buildCommand": "cd client && npm run build",
+  "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
   "framework": "vite",
   "env": {
     "VITE_API_BASE_URL": "@vite_api_base_url"
   },
-  "functions": {},
   "rewrites": [
     {
       "source": "/(.*)",
