Fix Vercel TypeScript build: add @types/node and remove unnecessary node types from app config

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -18,10 +18,7 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
-    
-    /* Fix React types compatibility */
-    "types": ["node"]
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
