--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "firebase": "^11.9.1",
     "lucide-react": "^0.460.0",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
