--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
-  "keywords": ["pdf", "transformation", "saas", "editor"],
+  "keywords": [
+    "pdf",
+    "transformation",
+    "saas",
+    "editor"
+  ],
   "author": "PDFFlow Team",
-  "license": "MIT"
-} 
+  "license": "MIT",
+  "dependencies": {
+    "@auth0/nextjs-auth0": "^4.7.0"
+  }
+}
