--- a/server/package.json
+++ b/server/package.json
@@ -13,26 +13,27 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase-admin": "^13.4.0",
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
-    "joi": "^17.9.2",
-    "uuid": "^9.0.0",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/helmet": "^0.0.48",
+    "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.17.0",
     "@types/uuid": "^9.0.2",
-    "@types/helmet": "^0.0.48",
-    "@types/compression": "^1.7.2",
-    "@types/morgan": "^1.9.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   }
-} 
+}
