--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -29,10 +32,17 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.8",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.17.0",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.2",
+    "jest": "^29.7.0",
+    "pdf-parse": "^1.1.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
   }
