--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pdfflow-server",
+  "name": "pdf-clinic-server",
   "version": "1.0.0",
-  "description": "PDFFlow backend server",
+  "description": "PDF Clinic backend server",
   "main": "dist/index.js",
   "engines": {
     "node": ">=18.0.0",
@@ -16,14 +16,17 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "firebase-admin": "^13.4.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.5",
     "pdf-lib": "^1.17.1",
     "uuid": "^9.0.0"
   },
