--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.17",
+    "archiver": "^7.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "firebase-admin": "^13.4.0",
@@ -31,6 +33,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -38,7 +41,7 @@
     "@types/jest": "^29.5.8",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.17.0",
+    "@types/node": "^18.19.123",
     "@types/pdf-parse": "^1.1.5",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.2",
