--- a/client/env.example
+++ b/client/env.example
@@ -1,5 +1,12 @@
 # Frontend Environment Variables
+# Development
 VITE_API_BASE_URL=http://localhost:3001/api
+
+# Production
+# VITE_API_BASE_URL=https://www.pdfclinic.org/api
+
+# Domain Configuration
+VITE_SITE_URL=https://www.pdfclinic.org
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_firebase_api_key
