--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-helmet-async": "^2.0.5",
     "react-pdf": "^7.7.3",
     "uuid": "^11.1.0"
   },
